# HotSpotter

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  styles.css  test-runner.mjs  tsconfig.json  vite.config.ts
apps/desktop/src/: document-app.css  document-app.tsx  document-workbench.test.ts  feedback-workbench-contract.ts  feedback-workbench.tsx  gpu-tiled-preview.test.ts  hierarchical-layout-templates.ts  hotspot-preview-lifecycle.test.ts  layout-authoring.test.ts  layout-authoring.ts  layout-workspace.tsx  live-rectified-canvas.tsx  main.tsx  manual-layout-presets.test.ts  manual-layout-presets.ts  material-preview.tsx  multi-source-patch-assignment.test.ts  mvp-edge-wear.test.ts  patch-authoring.test.ts  patch-authoring.ts  patch-workspace.tsx  (+12 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  diagnostics.rs  document_commands.rs  lib.rs  main.rs  paths.rs
crates/domain/: Cargo.toml
crates/domain/src/: algorithm_stack.rs  channel.rs  document.rs  error.rs  id.rs  layout.rs  lib.rs  material_source.rs  patch.rs  protocol.rs  source_frame.rs  units.rs
crates/domain/src/templates/: mod.rs
crates/effect-compiler/: Cargo.toml
crates/effect-compiler/src/: edge_detail.rs  lib.rs  stage10.rs  stage15.rs  stage16.rs
crates/export/: Cargo.toml
crates/geometry/: Cargo.toml
crates/geometry/src/: layout.rs  lib.rs
crates/image-io/: Cargo.toml
crates/image-io/src/: lib.rs  normalization.rs
crates/material-analysis/: Cargo.toml
crates/material-analysis/src/: delighting.rs  feature_fields.rs  lib.rs  quality_classification.rs  scale_orientation.rs
crates/material-synthesis/: Cargo.toml
crates/material-synthesis/src/: lib.rs  material_domain.rs  patchmatch.rs  procedural.rs  quilting.rs  router.rs
crates/placement-solver/: Cargo.toml
crates/placement-solver/src/: candidates.rs  lib.rs  optimizer.rs  scoring.rs
crates/preview/: Cargo.toml
crates/preview/src/: gpu_base_color.wgsl  gpu_edge_detail.wgsl  gpu_edge_detail_composition.wgsl  gpu_fill_r32float.wgsl  gpu_normal_from_height.wgsl  gpu_region_id.wgsl  gpu_region_id_display.wgsl  gpu_scalar_display.wgsl  gpu_semantic_detail.wgsl  gpu_structural_profile.wgsl  lib.rs
crates/project-store/: Cargo.toml
crates/project-store/src/: lib.rs
crates/project-store/tests/: kill_process.rs
crates/render-core/: Cargo.toml
crates/render-core/src/: lib.rs  registered_rectification.rs  structural_profile.rs
crates/sheet-compiler/: Cargo.toml
crates/sheet-compiler/src/: algorithm_compiler.rs  atlas_executor.rs  compiled_atlas_plan.rs  document_compiler.rs  intermediate_atlas.rs  lib.rs  persisted_pipeline.rs  slot_synthesis.rs
crates/sheet-compiler/tests/: gpu_execution_contract.rs  gpu_source_tile_parity.rs  gpu_stage_14_base_color.rs  real_8k_baseline.rs  source_frame_e2e.rs
docs/: gpu-prompt-1-real-8k-baseline.json  gpu-prompt-1-status-report.md  gpu-rendering-migration-execution-prompt-pack.md  gpu-rendering-migration-plan.md  hot-trimmer-native-edge-detail-implementation-plan.md  hot-trimmer-template-blender-companion-plan.md  hot-trimmer-v1-full-algorithm-stack-implementation-plan.md  hot-trimmer-v1-full-algorithm-stack-prompt-pack.md  hot-trimmer-v1-full-algorithm-stack-revised.md  manual-layout-preset-product-prompt-pack.md  manual-layout-prompt-1-implementation-report.md  mvp-plan.md  phase-3-engine-replacement-plan.md  phase-3-hotspot-ux-review.md  phases.md  runtime-integration-gate-prompt-pack.md  runtime-integration-plan.md  runtime-pipeline-audit.md  runtime-pipeline-graph.md  runtime-stage-matrix.json  source-frame-partition-prompt-pack.md  technical-spec.md  trimsheet-document-generation-redesign-plan.md  trimsheet-redesign-codex-prompt-pack.md  ux-workflow.md
docs/adr/: 0001-native-shell-and-ownership.md  0002-project-persistence.md  0003-renderer-authority.md  0004-color-and-channel-policy.md  0005-source-file-ownership.md  0006-template-first-product-model.md  0007-template-versus-custom-atlas.md  0008-canonical-integer-coordinates.md  0009-allocation-versus-hotspot-rectangles.md  0010-manifest-authority-and-id-diagnostics.md  0011-blender-companion-ownership.md  0012-atomic-local-revision-sync.md  0013-clean-room-reference-behavior.md
docs/phase-reports/: algorithm-stage-00.md  algorithm-stage-01.md  algorithm-stage-02.md  algorithm-stage-03.md  algorithm-stage-04.md  algorithm-stage-05.md  algorithm-stage-06.md  algorithm-stage-07.md  algorithm-stage-08.md  algorithm-stage-08a.md  algorithm-stage-08b.md  algorithm-stage-08c.md  algorithm-stage-08e.md  algorithm-stage-09.md  algorithm-stage-10.md  algorithm-stage-11.md  algorithm-stage-12.md  algorithm-stage-13.md  algorithm-stage-14-preview-a.md  algorithm-stage-14.md  algorithm-stage-15.md  algorithm-stage-16.md  algorithm-stage-20a.md  phase-0.md  phase-1-progress.md  phase-1.md  phase-2.md  slice-0-1-gate.md  slice-0-1-reusable-code-map.md
docs/render/: README.md  manual-review.md  prompt-001.5.md  prompt-001.md  prompt-002.md  prompt-003-report.md  prompt-003.md  prompt-004.md  prompt-005.md
docs/support/: diagnostics.md  recovery.md  security-review.md
fixtures/: edge-detail-intent-v1.json
fixtures/algorithm-stack/: material-corpus.json  stage-traceability.json
fixtures/contracts/: foundation-status.json  phase-1-lifecycle.json  phase-2-patch-authoring.json  phase-3-layout-authoring.json
fixtures/projects/: data-v1.sql  migrate-v1-to-v2.sql  migrate-v2-to-v3.sql  migrate-v3-to-v4.sql  migrate-v4-to-v5.sql  migrate-v5-to-v6.sql  migrate-v6-to-v7.sql  migrate-v7-to-v8.sql  schema-v1.sql  schema-v2.sql  schema-v3.sql  schema-v4.sql  schema-v7.sql
fixtures/renders/: phase-2-frontal.json  phase-2-rectification-cases.json  phase-3-layouts.json  slice-6-structural-profiles.json
scripts/: build.mjs  check-algorithm-stage-20b.mjs  check.mjs
(+30 files in other folders)
