[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/domain",
  "crates/export",
  "crates/geometry",
  "crates/image-io",
  "crates/preview",
  "crates/project-store",
  "crates/render-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "LicenseRef-Proprietary"

[workspace.dependencies]
hot-trimmer-domain = { path = "crates/domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

