[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/domain",
  "crates/export",
  "crates/geometry",
  "crates/image-io",
  "crates/preview",
  "crates/project-store",
  "crates/render-core",
  "crates/sheet-compiler",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "LicenseRef-Proprietary"

[workspace.dependencies]
base64 = "0.22"
hot-trimmer-domain = { path = "crates/domain" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
kamadak-exif = "0.6"
moxcms = "0.8"
rusqlite = { version = "0.32", features = ["backup", "bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
sysinfo = "0.33"
uuid = { version = "1", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
