[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/domain",
  "crates/export",
  "crates/geometry",
  "crates/image-io",
  "crates/material-analysis",
  "crates/material-synthesis",
  "crates/placement-solver",
  "crates/effect-compiler",
  "crates/preview",
  "crates/project-store",
  "crates/render-core",
  "crates/sheet-compiler",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
base64 = "0.22"
hot-trimmer-domain = { path = "crates/domain" }
hot-trimmer-material-analysis = { path = "crates/material-analysis" }
hot-trimmer-material-synthesis = { path = "crates/material-synthesis" }
hot-trimmer-placement-solver = { path = "crates/placement-solver" }
hot-trimmer-effect-compiler = { path = "crates/effect-compiler" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
kamadak-exif = "0.6"
moxcms = "0.8"
rusqlite = { version = "0.32", features = ["backup", "bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
sysinfo = "0.33"
uuid = { version = "1", features = ["serde", "v4"] }
wgpu = { version = "=26.0.1", default-features = true }
# wgpu 26.0.1 permits later 26.x HAL patches. Pin the published baseline HAL so
# the Rust 1.85 workspace does not drift to the incompatible 26.0.6 Windows graph.
wgpu-hal = "=26.0.0"
pollster = "=0.4.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
