[package]
name = "hot-trimmer-effect-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hot-trimmer-domain.workspace = true
hot-trimmer-placement-solver.workspace = true
hot-trimmer-render-core = { path = "../render-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
