[package]
name = "hot-trimmer-image-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hot-trimmer-domain.workspace = true
image.workspace = true
kamadak-exif.workspace = true
moxcms.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
