[package]
name = "hot-trimmer-material-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hot-trimmer-domain.workspace = true
hot-trimmer-geometry = { path = "../geometry" }
hot-trimmer-image-io = { path = "../image-io" }
hot-trimmer-render-core = { path = "../render-core" }
thiserror.workspace = true

[lints]
workspace = true
