[package]
name = "hot-trimmer-material-synthesis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hot-trimmer-domain.workspace = true
hot-trimmer-material-analysis.workspace = true
hot-trimmer-render-core = { path = "../render-core" }

[lints]
workspace = true
