[package]
name = "hot-trimmer-material-synthesis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hot-trimmer-domain.workspace = true
hot-trimmer-image-io = { path = "../image-io" }
hot-trimmer-material-analysis.workspace = true
hot-trimmer-render-core = { path = "../render-core" }
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
