[package]
name = "hot-trimmer-placement-solver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hot-trimmer-domain.workspace = true
hot-trimmer-material-analysis.workspace = true
hot-trimmer-material-synthesis.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
