[package]
name = "hot-trimmer-preview"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hot-trimmer-domain.workspace = true
pollster.workspace = true
serde.workspace = true
thiserror.workspace = true
wgpu.workspace = true
wgpu-hal.workspace = true

[lints]
workspace = true
