[package]
name = "hot-trimmer-project-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hot-trimmer-domain.workspace = true
hot-trimmer-geometry = { path = "../geometry" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
sysinfo.workspace = true

[lints]
workspace = true
