[package]
name = "hot-trimmer-render-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hot-trimmer-domain.workspace = true
hot-trimmer-geometry = { path = "../geometry" }
hot-trimmer-image-io = { path = "../image-io" }
thiserror.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
