[package]
name = "hot-trimmer-sheet-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hot-trimmer-domain.workspace = true
hot-trimmer-render-core = { path = "../render-core" }
thiserror.workspace = true

[lints]
workspace = true
