[package]
name = "hot-trimmer-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "hot_trimmer_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hot-trimmer-domain.workspace = true
serde.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
