[package]
name = "hot-trimmer-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "hot_trimmer_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64.workspace = true
hot-trimmer-domain.workspace = true
hot-trimmer-geometry = { path = "../../../crates/geometry" }
hot-trimmer-image-io = { path = "../../../crates/image-io" }
hot-trimmer-material-analysis.workspace = true
hot-trimmer-material-synthesis.workspace = true
hot-trimmer-placement-solver.workspace = true
hot-trimmer-project-store = { path = "../../../crates/project-store" }
hot-trimmer-render-core = { path = "../../../crates/render-core" }
hot-trimmer-sheet-compiler = { path = "../../../crates/sheet-compiler" }
image.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid.workspace = true
sha2.workspace = true

[dev-dependencies]

[lints]
workspace = true
